# Game-Archive-Manager-rust

./: CROSS_COMPILE.md  Cargo.toml  LICENCE  README.md  README_v2.md  build.bat  install.sh  test_binary.sh  test_comprehensive.sh  test_extended.sh
.cargo/: config.toml
.gam/: HEAD  config
.sisyphus/plans/: analysis-report-v1.md  game-archive-manager-rust.md  game-archive-manager-v2.md
src/: main.rs
src/cli/: args.rs  mod.rs
src/commands/: mod.rs
src/core/: activity.rs  archive_info.rs  archive_manager.rs  commands.rs  error.rs  ignore.rs  mod.rs  tag.rs  types.rs
src/core/messages/: mod.rs
src/core/store/: content_store.rs  mod.rs  snapshot_store.rs
src/ui/: formatter.rs  mod.rs
src/utils/: file_utils.rs  hash.rs  mod.rs
