[package]
name = "game-archive-manager"
version = "0.1.0"
edition = "2024"
description = "游戏存档备份管理工具 - Game Archive Manager"
authors = ["Game Archive Manager Contributors"]

[dependencies]
# 错误处理
anyhow = "1.0"
thiserror = "2.0"

# JSON 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 日期时间处理
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = "symbols"
panic = "abort"

[profile.dev]
panic = "abort"
