[package]
name = "game-archive-manager"
version = "2.0.0"
edition = "2024"
description = "游戏存档版本控制系统 - Game Archive Manager v2.0"
authors = ["Game Archive Manager Contributors"]

[dependencies]
# 错误处理
anyhow = "1.0"
thiserror = "2.0"

# JSON 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 日期时间处理
chrono = { version = "0.4", features = ["serde"] }

# 命令行解析
clap = { version = "4.4", features = ["derive", "cargo"] }

# 哈希计算
sha2 = "0.10"

# glob 模式匹配
glob = "0.3"

# 目录遍历
walkdir = "2.4"

# 终端颜色
ansi_term = "0.12"

# once_cell 用于全局状态
once_cell = "1.19"

# TOML 解析
toml = "0.8"

# 临时目录（用于测试）
tempfile = "3.8"

# 并行处理（可选）
# rayon = "1.8"

[features]
# 静态链接（用于 Windows 跨平台编译）
default = []

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "winbase"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = "symbols"
panic = "abort"

[profile.dev]
panic = "abort"
